@@ -13,11 +13,7 @@
     <extension point="xbmc.python.module" library="resources/lib/"/>
     <extension point="xbmc.addon.metadata">
         <news>
-[fix] next page now ignores sorting, remains at the end of the directory
-[fix] searching, no longer require remote safe search
-[fix] notifications for some languages
-[chg] only log http server ping failures
-[lang] zh_cn strings |contrib: yureng, xiaojun|
+[upd] use xbmcvfs.translatePath if available, clean up for Kodi 19
         </news>
         <assets>
             <icon>icon.png</icon>
